src/objects/POSMAssignment__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POSMId__c</fullName>
        <label>POSMId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSMNo__c</fullName>
        <externalId>true</externalId>
        <label>POSMNo</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ScorecardDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ScorecardDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Supervisor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POSMAssignment</label>
    <nameField>
        <label>POSMAssignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POSMAssignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>